Colab을 통해 생성됨

--- a/까스/spl_EDA.ipynb
+++ b/까스/spl_EDA.ipynb
@@ -174,6 +174,32 @@
     {
       "cell_type": "code",
       "source": [
+        "use_spl_city_agg = use_spl_city.groupby('연도').sum().reset_index()\n",
+        "use_spl_gen_agg = use_spl_gen.groupby('연도').sum().reset_index()\n",
+        "\n",
+        "use_spl_city_agg = use_spl_city_agg[use_spl_city_agg['연도'] != 2025]\n",
+        "use_spl_gen_agg = use_spl_gen_agg[use_spl_gen_agg['연도'] != 2025]"
+      ],
+      "metadata": {
+        "id": "qYg2-L8J-GmW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "use_spl_gen_agg.연도"
+      ],
+      "metadata": {
+        "id": "SAZnPpYt_lOp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "fig = go.Figure()\n",
         "fig.add_trace(go.Scatter(x=use_spl_gen['splym'], y=use_spl_gen['공급량'],mode = 'lines',name='발전용가스'))\n",
         "fig.add_trace(go.Scatter(x=use_spl_city['splym'], y=use_spl_city['공급량'],mode = 'lines',name='도시가스'))\n",
@@ -181,6 +207,56 @@
       ],
       "metadata": {
         "id": "USrKar3GkhFo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = go.Figure()\n",
+        "\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=use_spl_gen['splym'], y=use_spl_gen['공급량'], name=\"발전용가스\")\n",
+        ")\n",
+        "\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=use_spl_city['splym'], y=use_spl_city['공급량'], name=\"도시가스\")\n",
+        ")\n",
+        "\n",
+        "fig.update_layout(\n",
+        "    barmode='stack'\n",
+        ")\n",
+        "\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "qwaLGtz68rZH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = go.Figure()\n",
+        "\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=use_spl_gen_agg['연도'], y=use_spl_gen_agg['공급량'], name=\"발전용가스\")\n",
+        ")\n",
+        "\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=use_spl_city_agg['연도'], y=use_spl_city_agg['공급량'], name=\"도시가스\")\n",
+        ")\n",
+        "\n",
+        "fig.update_layout(\n",
+        "    barmode='stack'\n",
+        ")\n",
+        "\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "rmoTim3s-S8N"
       },
       "execution_count": null,
       "outputs": []
