--- a/까스/전력거래소_TFT예측.ipynb
+++ b/까스/전력거래소_TFT예측.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dayoungcho/dacon/blob/main/%EC%A0%84%EB%A0%A5%EA%B1%B0%EB%9E%98%EC%86%8C_TFT%EC%98%88%EC%B8%A1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dayoungcho/dacon/blob/main/%EA%B9%8C%EC%8A%A4/%EC%A0%84%EB%A0%A5%EA%B1%B0%EB%9E%98%EC%86%8C_TFT%EC%98%88%EC%B8%A1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,7 +23,7 @@
         "id": "5Xgt8n3j4YMk",
         "outputId": "0e26d471-8e5a-479d-f36b-eea9e11482f1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "KQY_XMsg4dnd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "id": "LAYOZOktpDzv",
         "outputId": "6050f86d-594e-407c-efcd-0addb1d65b80"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,12 +89,16 @@
         "import itertools\n",
         "from pytimekr import pytimekr\n",
         "from pytorch_forecasting import TimeSeriesDataSet\n",
-        "from pytorch_forecasting.data import GroupNormalizer"
+        "from pytorch_forecasting.data import GroupNormalizer\n",
+        "import pytorch_lightning as pl\n",
+        "from pytorch_lightning.callbacks import EarlyStopping, LearningRateMonitor\n",
+        "from pytorch_forecasting import TemporalFusionTransformer, QuantileLoss\n",
+        "from pytorch_lightning.loggers import TensorBoardLogger"
       ],
       "metadata": {
         "id": "144uqFEs4yja"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +113,7 @@
       "metadata": {
         "id": "yiiifS2b4se7"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +134,7 @@
       "metadata": {
         "id": "ZZO-N6A-aKhz"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +150,7 @@
         "id": "YDycfgVdYxLP",
         "outputId": "bafa2c79-7e71-4f33-bf8c-07479db460f0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,7 +596,7 @@
         "max_encoder_length = 30   # 과거 30일을 참조 (encoder 길이)\n",
         "training_cutoff = electrade.거래일.max() - pd.Timedelta(days=max_prediction_length) # 학습 데이터 자르는 시점\n",
         "\n",
-        "traing = TimeSeriesDataSet(\n",
+        "training = TimeSeriesDataSet(\n",
         "    electrade[lambda x: x.time_idx <= training_cutoff],   # 학습용 데이터만 필터링\n",
         "\n",
         "    # ---기본 설정---\n",
@@ -613,11 +617,20 @@
         "\n",
         "    # 2. 미래를 아는 변수(known inputs)\n",
         "    time_varying_known_categoricals = [],\n",
-        "    time_varying_known_reals = [],   # 타겟도 포함시켜야함\n",
+        "    time_varying_known_reals = [],   # time_idx 여기에 포함시키기\n",
         "\n",
         "    # 3. 과거만 아는 변수\n",
-        ")\n",
+        "    time_varying_unknown_categoricals = [],\n",
+        "    time_varying_unknown_reals = [],  # 타겟도 포함시켜야함\n",
         "\n",
+        "    # ---전처리 옵션---\n",
+        "    target_normalizer = GroupNormalizer(\n",
+        "        groups=[\"fuel_type\"], transformation=\"softplus\"\n",
+        "    ),\n",
+        "    add_relative_time_idx = True,  # 시퀀스 내 상대적 시간 인덱스 자동 추가\n",
+        "    add_target_scales = True,      # 타겟의 스케일 정보 추가(정규화 복원 시 필요)\n",
+        "    add_encoder_length = True,     # 인코더 길이 정보 추가\n",
+        ")\n",
         "\n",
         "\n",
         "\n"
@@ -630,7 +643,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 실제 사용을 위한 Dataloader 변환\n",
+        "batch_size = 128  # GPU 메모리에 맞춰 조절\n",
+        "train_dataloader = traing.to_dataloader(train=True, batch_size=batch_size, num_workers=0)"
+      ],
       "metadata": {
         "id": "jIwFWE5N0DZu"
       },
@@ -639,7 +656,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# -----------------------------\n",
+        "# 1단계: DataLoader 만들기\n",
+        "# -----------------------------\n",
+        "\n",
+        "# 검증 데이터셋(validation set) 분리: 마지막 시간을 기준으로 나눔\n",
+        "validation = TimeSeriesDataSet.from_dataset(\n",
+        "    training, electrade, predict=True,\n",
+        "    stop_randomization=True\n",
+        ")\n",
+        "\n",
+        "# 학습용 로더\n",
+        "train_dataloader = training.to_dataloader(\n",
+        "    train = True,\n",
+        "    batch_size = batch_size,\n",
+        "    num_workers = 0\n",
+        ")\n",
+        "\n",
+        "# 검증용 로더\n",
+        "val_dataloader = validation.to_dataloader(\n",
+        "    train = False,\n",
+        "    batch_size = batch_size * 10,\n",
+        "    num_workers = 0\n",
+        ")\n"
+      ],
       "metadata": {
         "id": "1PrJON3c0DV-"
       },
@@ -648,9 +689,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# -----------------------------\n",
+        "# 2단계: TFT 모델 생성\n",
+        "# -----------------------------\n",
+        "\n",
+        "tft = TemporalFusionTransformer.from_dataset(\n",
+        "    training,\n",
+        "    # [학습 파라미터]\n",
+        "    learning_rate = 0.03, # 0.01~0.05 사이로 설정\n",
+        "    hidden_size = 64, # 모델의 크기(데이터가 적으면 16, 많으면 64-128)\n",
+        "    attention_head_size, = 1 # 어텐션 헤드 수(보통 1~4)\n",
+        "    dropout = 0.1, # 과적합 방지(0.1~0.3)\n",
+        "    hidden_continuous_size, = 8 # 연속형 변수 처리 크기\n",
+        "\n",
+        "    # [손실 함수] -> tft는 확률적 예측을 하므로 QuantileLoss 사용\n",
+        "    loss = QuantileLoss(),\n",
+        "\n",
+        "    # [로그 및 최적화 설정]\n",
+        "    log_interval = 10,\n",
+        "    optimizer = \"Ranger\",  # # tft 저자가 추천함..아니면 torch.optim.Adam\n",
+        "    reduce_on_plateau_patience = 4, # 성능이 안 오르면 학습률을 줄임\n",
+        ")\n",
+        "\n",
+        "\n",
+        "print(f\"모델 파라미터 개수: {tft.size()/le3:.1f}k\")"
+      ],
+      "metadata": {
+        "id": "QhvVo3z6E7Qu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# -----------------------------\n",
+        "# 3단계: 트레이너(Trainer) 설정 및 학습 시작\n",
+        "# -----------------------------\n",
+        "\n",
+        "# 과적합 방지: 검증 성능이 10번 연속 좋아지지 않으면 조기 종료\n",
+        "early_stop_callback = EarlyStopping(\n",
+        "    monitor = \"val_loss\",\n",
+        "    min_delta = 1e-4,\n",
+        "    patience = 10,\n",
+        "    verbose = False,\n",
+        "    mode = \"min\"\n",
+        ")\n",
+        "\n",
+        "lr_loger = LeariningRateMonitor()  # 학습률 변화 기록\n",
+        "\n",
+        "trainer = pl.Trainer(\n",
+        "    max_epochs = 30,   # 최대 30번 학습(얼리스타핑으로 일찍 끝날 수 있음)\n",
+        "    accelerator = \"auto\",  # gpu가 있으면 자동 사용, 없으면 cpu 사용\n",
+        "    devices = 1,   # 사용할 장치 개수\n",
+        "    enable_model_summary = True,\n",
+        "    gradient_clip_val = 0.1 # 학습 안정화를 위해 기울기 자르기\n",
+        "    callbacks = [lr_logger, early_stop_callback]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "_1kiq7xlE8Be"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 학습 시작\n",
+        "\n",
+        "print(\"학습을 시작합니다...\")\n",
+        "trainer.fit(\n",
+        "    tft,\n",
+        "    train_dataloaders=train_dataloader,\n",
+        "    cal_dataloaders=val_dataloader\n",
+        ")"
+      ],
       "metadata": {
         "id": "XyWE3JOt0DTV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Best Model 로드\n",
+        "best_model_path = trainer.checkpoint_callback.best_model_path\n",
+        "best_tft = TemporalFusionTransformer.load_from_checkpoint(best_model_path)\n",
+        "\n",
+        "# 검증 데이터에 대해 예측 수행(mode=\"prediction\"이면 점추정(quantile 중 0.5, 즉 중앙값 반환). mode=\"quantiles\"면 구간추정(모든 quantile 반환))\n",
+        "raw_predictions, x = best_tft.predict(\n",
+        "    val_dataloader,\n",
+        "    mode = \"raw\",\n",
+        "    return_x = True\n",
+        ")\n",
+        "\n",
+        "# 결과 시각화\n",
+        "best_tft.plot_prediction(x, raw_predictions, idx=0, add_loss_to_title=True)"
+      ],
+      "metadata": {
+        "id": "y8_hE3ZeGZ9u"
       },
       "execution_count": null,
       "outputs": []
@@ -708,7 +848,7 @@
         "id": "xxhdIrUIbds_",
         "outputId": "30c3a7fe-d7e5-4e8e-bc1f-7c6c378cfc13"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1269,7 @@
         "id": "7Jlxq9gEblLX",
         "outputId": "c1cd2acd-b1a7-4fa4-975a-162b0f155b89"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,7 +1680,7 @@
         "id": "H4OFid3SdCmq",
         "outputId": "8121ea4c-c3e8-4156-9e28-a2e935441338"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1939,7 +2079,7 @@
         "id": "A4w7T5D8fzCG",
         "outputId": "1e8c5228-0520-4255-9bde-e453ac496a85"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
