Colab을 통해 생성됨

--- a/까스/spl_EDA.ipynb
+++ b/까스/spl_EDA.ipynb
@@ -260,6 +260,45 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "city = pd.read_csv('한국가스공사_도시가스 국가수요실적 및 비중_20201231.csv', encoding='cp949')\n",
+        "gen = pd.read_csv('한국가스공사_발전용 국가수요실적 및 비중_20201231.csv', encoding='cp949')"
+      ],
+      "metadata": {
+        "id": "Y0vksJWHwOyw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = go.Figure()\n",
+        "colors = px.colors.qualitative.Plotly\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=gen['연도'], y=gen['계(만톤)'], name=\"발전용가스\")\n",
+        ")\n",
+        "\n",
+        "fig.add_trace(\n",
+        "    go.Bar(x=city['연도'], y=city['계(만톤)'], name=\"도시가스\")\n",
+        ")\n",
+        "\n",
+        "fig.update_layout(\n",
+        "    barmode='stack',\n",
+        "    title = '발전용/도시가스용 국가수요실적',\n",
+        ")\n",
+        "fig.update_xaxes(title_text = '연도')\n",
+        "fig.update_yaxes(title_text = '수요량(만톤)')\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "52dOo5RVwQ3l"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
